update to new dir structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="plot.ly/plotly-latest.min.js"></script>
   <script src="audiosynth/audiosynth.js"></script>
-  <script src="speakClient.js"></script>
+  <script src="speak.js/speakClient.js"></script>
 </head>
 
 <body>
