added explanation, map size relative

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 
 <body>
 
-<div id='plotdiv' style='width:900px; height:900px'></div>
+<p>
+<ul>
+<li>Hovering the map plays a sound with frequency modulated by data</li>
+<li>Click on a point to read out coordinates and value</li>
+</ul>
+</p>
+<br>
+<div id='plotdiv' style='width:100%; height:100%'></div>
 <div id="audio"></div>
 
 
