--- a/mapsonify/index.html
+++ b/mapsonify/index.html
@@ -1,9 +1,8 @@
 <html>
 
 <head>
-  <script src="plot.ly/plotly-latest.min.js"></script>
-  <script src="audiosynth/audiosynth.js"></script>
-  <script src="speak.js/speakClient.js"></script>
+  <script src="lib/plot.ly/plotly-latest.min.js"></script>
+  <script src="lib/p5/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -16,19 +15,10 @@
 </p>
 <br>
 <div id='plotdiv' style='width:100%; height:100%'></div>
-<div id="audio"></div>
 
 
 <script>
 
-  // function to play a sound, expected argument is an integer between 0 and 6 
-  var sound = Synth.createInstrument('pling');
-  play = function(value) {
-    value = Math.round(Math.max(Math.min(value, 6), 0))
-    notes = ['C', 'D', 'E', 'F', 'G', 'A', 'B']
-    sound.play(notes[value], 4, .1); // play note in 4th octave for .1sec using the custom 'pling' sound 
-  }
-  
   // data is a north-south gradient on lat-lon grid over UK
   data = []
   lat_seq = [49, 60, .5]
@@ -65,15 +55,15 @@
   
   // hover interaction: play sound with frequency modulated by value 
   document.getElementById('plotdiv').on('plotly_hover', function(d) {
-    play(d.points[0].data.value)
+
   })
   // click interaction: play sound and read data 
   document.getElementById('plotdiv').on('plotly_click', function(d) {
     lat = d.points[0].data.lat[0].toFixed(1)
     lon = d.points[0].data.lon[0].toFixed(1)
     val = d.points[0].data.value
-    text = 'lat: '+ lat + ', lon: ' + lon +', value: ' + val,
-    speak(text)
+
+
   })
 
 </script>
