--- a/mapsonify/index.html
+++ b/mapsonify/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <script src="lib/plot.ly/plotly-latest.min.js"></script>
+  <script src="lib/p5/p5.min.js"></script>
   <script src="lib/p5/p5.sound.min.js"></script>
 </head>
 
@@ -25,7 +26,7 @@
   lon_seq = [-8, 3, .5]
   for (lat = lat_seq[0]; lat <= lat_seq[1]; lat+=lat_seq[2]) {
     for (lon = lon_seq[0]; lon <= lon_seq[1]; lon+=lon_seq[2]) {
-      val = Math.round((lat - lat_seq[0]) / (lat_seq[1] - lat_seq[0]) * 6)
+      val = Math.round((lat - lat_seq[0]) / (lat_seq[1] - lat_seq[0]) * 120)
       data.push({
         lat: [lat],
         lon: [lon],
@@ -54,16 +55,46 @@
   Plotly.newPlot('plotdiv', data, layout)
   
   // hover interaction: play sound with frequency modulated by value 
-  document.getElementById('plotdiv').on('plotly_hover', function(d) {
+  var osc;
+  var playing;
+  var freq = 240;
+  function setup() {
+    osc = new p5.Oscillator();
+    osc.setType('sine');
+    osc.freq(freq);
+    osc.amp(0);
+    osc.start();
+    playing = false;
+  }
 
+  document.getElementById('plotdiv').on('plotly_hover', function(d) {
+    lat = d.points[0].data.lat[0]
+    lon = d.points[0].data.lon[0]
+    if (lat === lat_seq[0] || 
+        lat === lat_seq[1] || 
+        lon === lon_seq[0] || 
+        lon === lon_seq[1]) {
+      if (playing) {
+        osc.amp(0, 0.5);
+        playing = false
+      }
+    } else {
+      if (!playing) {
+        playing = true
+      }
+      freq = 240 + d.points[0].data.value
+      osc.amp(0.5, 0.5);
+      osc.freq(freq, 0.5)
+    }
   })
+
   // click interaction: play sound and read data 
   document.getElementById('plotdiv').on('plotly_click', function(d) {
     lat = d.points[0].data.lat[0].toFixed(1)
     lon = d.points[0].data.lon[0].toFixed(1)
     val = d.points[0].data.value
-
-
+    osc.amp(0, 0.5);
+    playing = false;
   })
 
 </script>
